⚡improve: use updated links in highlighter; resolve #39
Squashed commit of the following:

commit d1c1df9004a98613c7eaf8bec8be21dd795bfc1e
Author: Huey <hello@huey.xyz>
Date:   Mon Jun 14 15:28:32 2021 +0800

    bump version to v2.6.2

commit 396975b942bd4057e1a3dbd449f2c6b67afa347e
Author: Huey <hello@huey.xyz>
Date:   Mon Jun 14 15:28:08 2021 +0800

    remove downloadFile

commit b2b7f9b97f10ba9fa56b22c5915f499a09b49296
Author: Huey <hello@huey.xyz>
Date:   Mon Jun 14 15:27:25 2021 +0800

    ⚡improve: use downloadPDF function

commit ad65059a78c1c4cc8d5695e950dac9fa215225bf
Author: Huey <hello@huey.xyz>
Date:   Mon Jun 14 15:02:16 2021 +0800

    ⚡improve: use updated links in Highlighter and fix CURIA bug

--- a/src/ContentScript/ContentScript.scss
+++ b/src/ContentScript/ContentScript.scss
@@ -5,11 +5,11 @@
     text-decoration: underline dotted;
     cursor: pointer;
 
-    > .clerkent-tooltip {
+    >.clerkent-tooltip {
       display: none;
     }
 
-    &:hover > .clerkent-tooltip {
+    &:hover>.clerkent-tooltip {
       display: block;
     }
   }
@@ -19,31 +19,54 @@
   font-family: $font;
   display: none;
   position: fixed;
-  background: black;
-  color: white;
+  background: white;
+  color: black;
   padding: 0.5rem 0.8rem;
   max-width: 15rem;
   z-index: 999;
+  border: 1px solid black;
+  box-sizing: border-box;
 
-  > .clerkent-meta {
+  >.clerkent-meta {
     display: flex;
     flex-direction: row;
     align-content: center;
     align-items: center;
     margin-bottom: 0.4rem;
-    > span {
+
+    >span {
       margin-right: 0.5rem;
     }
-    > small {
 
-    }
+    >small {}
   }
 
   a {
-    color: lightgray !important;
+    color: black !important;
+    text-decoration: none !important;
+
+    &[href] {
+      color: blue !important;
+      cursor: pointer;
+
+      &:hover {
+        text-decoration: underline !important;
+      }
+    }
   }
 
-  a:hover {
-    color: white !important;
+  >.clerkent-links {
+    a.clerkent-pdf {
+      >img {
+        height: 1rem;
+        margin-left: 0.25rem;
+        margin-bottom: -0.15rem;
+        filter: invert(14%) sepia(89%) saturate(2676%) hue-rotate(350deg) brightness(84%) contrast(122%);
+      }
+
+      &+a {
+        margin-left: 1rem;
+      }
+    }
   }
 }
